fix: corrige scrollbar saindo da tela

--- a/css/form-1.css
+++ b/css/form-1.css
@@ -18,6 +18,7 @@
     align-items: center;
     
 }
+
 #cadastro{
     display: flex;
     align-items: center;
@@ -139,14 +140,16 @@ button:hover{
     overflow-y: scroll;
     overflow-x: hidden;
     width: 190px;
-    height: 250px;
+    height: 240px;
     scrollbar-width:thin;
     scrollbar-color: #333333 #999999;
+   
     
 }
 /* Estilização da scrollbar */
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 4px;
+
   }
 
 ::-webkit-scrollbar-track {
